# universal_robot

./: .gitignore  README.md
scripts/: cartesian_movement.py  frames.gv  test_gripper.py
universal_robot/: package.xml
ur10_moveit_config/: CMakeLists.txt  package.xml
ur10_moveit_config/config/: joint_limits.yaml  joint_limits_full.yaml  joint_limits_half.yaml  kinematics.yaml  ur10.srdf  ur10_cart_teachmate.srdf  ur10_workbench_teachmate.srdf  ur10e_cart_teachmate.srdf
ur10_moveit_config/launch/: planning_context.launch  planning_context_stand_teachmate_dynamic.launch  ready_move_group.launch  ready_ur10_moveit_planning_execution.launch
ur10e_moveit_config/: CMakeLists.txt  LICENSE  package.xml
ur10e_moveit_config/config/: joint_limits.yaml  ur10e.srdf  ur10e_cart_teachmate.srdf
ur3_moveit_config/: CMakeLists.txt  package.xml
ur3e_moveit_config/: CMakeLists.txt  package.xml
ur5_control/: CMakeLists.txt  package.xml
ur5_experimental/: CMakeLists.txt  package.xml
ur5_moveit_config/: CMakeLists.txt  READMD.md  package.xml
ur5_moveit_config/config/: controllers.yaml  joint_limits.yaml  joint_limits_full.yaml  joint_limits_half.yaml  joint_limits_original.yaml  kinematics.yaml  ompl_planning.yaml  ur5.srdf  ur5_cart_teachmate.srdf  ur5_workbench_teachmate.srdf  ur5e_cart_teachmate.srdf
ur5_moveit_config/launch/: amanda_demo.launch  demo.launch  demo_primesense.launch  moveit.rviz  planning_context.launch  planning_context_stand_teachmate.launch  planning_context_stand_teachmate_dynamic.launch  ready_move_group.launch  ready_move_group_stand_teachmate.launch  ready_ur5_moveit_planning_execution.launch  ready_ur5_stand_teachmate_moveit_planning_execution.launch  sensor_manager.launch.xml  ur5_moveit_sensor_manager.launch.xml
ur5_robotiq_control/: CMakeLists.txt  package.xml
ur5_robotiq_description/: CMakeLists.txt  package.xml
ur5_robotiq_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur5e_moveit_config/: CMakeLists.txt  package.xml
ur_bringup/: package.xml
ur_description/: CMakeLists.txt  package.xml
ur_description/launch/: test.launch  ur10_upload.launch  ur5_stand_teachmate_upload.launch  ur5_upload.launch
ur_description/meshes/ur10e/visual/: wrist3.dae
ur_description/meshes/ur3e/collision/: wrist1.dae  wrist3.dae
ur_description/meshes/ur3e/visual/: wrist2.dae
ur_description/meshes/ur5/visual/: forearm.dae  shoulder.dae  upperarm.dae
ur_description/meshes/ur5e/visual/: forearm.dae  wrist3.dae
ur_description/urdf/: .ur5_joint_limited_robot.urdf.swp  ur10.urdf.xacro  ur10_fixture.urdf.xacro  ur10_joint_limited_robot.urdf.xacro  ur10_robot.urdf.xacro  ur10e.urdf.xacro  ur10e_fixture.urdf.xacro  ur10e_joint_limited_robot.urdf.xacro  ur10e_robot.urdf.xacro  ur3.urdf.xacro  ur3_fixture.urdf.xacro  ur3_joint_limited_robot.urdf.xacro  ur3_robot.urdf.xacro  ur3e.urdf.xacro  ur3e_fixture.urdf.xacro  ur3e_joint_limited_robot.urdf.xacro  ur3e_robot.urdf.xacro  ur5.transmission.xacro  ur5.urdf.xacro  ur5_fixture.urdf.xacro  ur5_joint_limited.urdf.xacro  ur5_joint_limited_robot.urdf.xacro  ur5_robot.urdf  ur5_robot.urdf.xacro  ur5e.urdf.xacro  ur5e_fixture.urdf.xacro  ur5e_joint_limited_robot.urdf.xacro  ur5e_robot.urdf.xacro
ur_driver/: .CMakeLists.txt.swp  package.xml  (+21 more)
(+74 files in other folders)
