<?xml version="1.0"?>
<package format="2">
  <name>ur5_moveit_config</name>
  <version>3.1.3</version>
  <description>
     A package containing MoveIt related configurations and utilities for the UR5
  </description>
  <author email="fxm@ipa.fhg.de">Felix Messmer</author>
  <maintainer email="josh@ready-robotics.com">Joshua Davis</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>moveit_plugins</exec_depend>
  <exec_depend>trac_ik_kinematics_plugin</exec_depend>
  <exec_depend>trac_ik_lib</exec_depend>

  <export></export>
</package>
