<?xml version="1.0"?>
<package format="2">
  <name>ur_description</name>
  <version>2.3.0</version>
  <description>
      URDF description for Universal UR5/10 robot arms
  </description>

  <author>Wim Meeussen</author>
  <author email="kphawkins@gatech.edu">Kelsey Hawkins</author>
  <author>Mathias Ludtke</author>
  <author email="fxm@ipa.fhg.de">Felix Messmer</author>
  <maintainer email="aub@ipa.fhg.de">Alexander Bubeck</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/ur_description</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cerberus</depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
  </export>
</package>
